--- a/project/SheduledRepair.lpi
+++ b/project/SheduledRepair.lpi
@@ -13,6 +13,12 @@
         <DpiAware Value="True"/>
       </XPManifest>
     </General>
+    <VersionInfo>
+      <UseVersionInfo Value="True"/>
+      <AutoIncrementBuild Value="True"/>
+      <MinorVersionNr Value="1"/>
+      <BuildNr Value="314"/>
+    </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
     </BuildModes>
@@ -109,6 +115,7 @@
         <Filename Value="../forms/editors/equipmentform.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="EquipmentWindow"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit17>
       <Unit18>
