--- a/project/SheduledRepair.lpi
+++ b/project/SheduledRepair.lpi
@@ -17,7 +17,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MinorVersionNr Value="2"/>
-      <BuildNr Value="680"/>
+      <BuildNr Value="695"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
@@ -38,7 +38,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="68">
+    <Units Count="69">
       <Unit0>
         <Filename Value="SheduledRepair.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -331,6 +331,12 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit67>
+      <Unit68>
+        <Filename Value="../forms/editors/greasebundleform.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="GreaseBundleWindow"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit68>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
