Add translate settings

--- a/.gitignore
+++ b/.gitignore
@@ -81,4 +81,5 @@ unit-tests/test.fpcunit.ini
 unit-tests/test
 project/SheduledRepair
 project/SheduledRepair.ico
-project/database.db
+
+database.db
